# demsph

./: Cargo.toml
examples/: hopper.rs  hopper_3d.rs  rigid_body_collision.rs  rigid_body_rotation.rs
src/: contact_search.rs  geometry.rs  integrate.rs  lib.rs  math.rs  save_data.rs
src/physics/: mod.rs
src/physics/dem/: equations.rs  mod.rs
src/physics/rigid_body/: equations.rs  mod.rs
tests/: test_contact_search.rs
