[package]
name = "granules-rs"
version = "0.1.0"
authors = ["dineshadepu <adepu.dinesh.a@gmail.com>"]
license = "MIT"
description = "Discrete element method"
repository = "https://gitlab.com/dineshadepu/granules-rs"
readme = "Readme.md"
keywords = ["dem","sph","fluid simulation"]


[dependencies]
itertools="0.7"
rulinalg="0.4.2"
cgmath="0.16"
# Using for linspace and arange
ndarray="0.11"


[lib]
name = "granules"
path = "src/lib.rs"
